--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
-html { 
-  background-color: black;
+@media screen and (min-width: 200px){
+  button {
+    font-size: 20px;
+  }
 }
-.bg {
-  color: white;
+
+/*
+Desktop size buttons
+*/
+@media screen and (min-width: 700px) {
+  button {
+    font-size: 24px;
+  }
+}
+.well {
+    text-align: center;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
+html {
+  display: flex;
+    justify-content: center;
+    align-items: center;
 }
