--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 200px){
   button {
-    font-size: 20px;
+    font-size: 22px;
   }
 }
 
@@ -13,6 +13,8 @@ Desktop size buttons
   }
 }
 .well {
+    margin-top: 150px;
+    margin-bottom: 150px;
     text-align: center;
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
