--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ Desktop size buttons
     margin-top: 150px;
     margin-bottom: 150px;
     text-align: center;
+    padding: 20px;
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
     border-radius: 4px;
