--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ Desktop size buttons
 }
 html {
   display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Oswald', sans-serif;
 }
